templates/layout: Prevent flashing of collapsed sidebar on page load
When sidebar is in collpased mode, it was previously flashing from expanded
to collapsed when loading a page as its state was changed using javascript.

So prefer to use a cookie describing sidebar state that can be read server
side from django and injected in templates, this way the sidebar is ensured
to be in correct state in HTML code on page load.

--- a/assets/src/bundles/webapp/webapp.css
+++ b/assets/src/bundles/webapp/webapp.css
@@ -487,6 +487,10 @@ ul.nav-sidebar a {
     visibility: hidden;
 }
 
+.sidebar-collapse .swh-words-logo-swh {
+    visibility: visible;
+}
+
 hr.swh-faded-line {
     border: 0;
     height: 1px;
